[package]
name = "stourney"
version = "0.0.3"
edition = "2021"
license = "MIT"
keywords = ["splendor", "game", "tournament", "manager"]
description = "Splendor tournament manager - an app for running Splendor tournaments between autonomous agents"
readme = "README.md"
repository = "https://github.com/pashneal/stourney_scripts"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
clap-verbosity-flag = "2.2.1"
derive = "1.0.0"
env_logger = "0.11.5"
log = "0.4.22"
