[package]
name = "stourney"
version = "0.1.12"
edition = "2021"
license = "MIT"
keywords = ["splendor", "game", "tournament", "manager"]
description = "Splendor tournament manager - an app for running Splendor tournaments between autonomous agents"
readme = "README.md"
repository = "https://github.com/pashneal/stourney_scripts"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] , default-features = false}
clap-verbosity-flag = "2.2.1"
confy = "0.6.1"
derive = "1.0.0"
dialoguer = { version = "0.11.0", default-features = false }
env_logger = "0.10.2"
log = "0.4.20"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
splendor_arena = "0.1.14"

